//(C) Copyright [2020] Hewlett Packard Enterprise Development LP
//(C) Copyright 2020 Intel Corporation
//
//Licensed under the Apache License, Version 2.0 (the "License"); you may
//not use this file except in compliance with the License. You may obtain
//a copy of the License at
//
//    http:#www.apache.org/licenses/LICENSE-2.0
//
//Unless required by applicable law or agreed to in writing, software
//distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
//WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
//License for the specific language governing permissions and limitations
// under the License

syntax = "proto3";

 service Chassis {
 rpc GetChassisCollection(GetChassisRequest) returns (GetChassisResponse){}
 rpc GetChassisResource(GetChassisRequest) returns (GetChassisResponse){}
 rpc GetChassisInfo(GetChassisRequest) returns (GetChassisResponse){}
 rpc CreateChassis(CreateChassisRequest) returns (GetChassisResponse){}
 rpc DeleteChassis(DeleteChassisRequest) returns (GetChassisResponse){}
 rpc UpdateChassis(UpdateChassisRequest) returns (GetChassisResponse){}
 }

 message GetChassisRequest{
    string sessionToken=1;
    string requestParam=2;
    string URL=3;
    string resourceID=4;
}

 message GetChassisResponse{
    int32 statusCode=1;
    string statusMessage=2;
    map<string,string> header=3;
    bytes body=4;
}

 message CreateChassisRequest{
   string sessionToken=1;
   bytes RequestBody = 2;
 }

 message DeleteChassisRequest{
   string sessionToken=1;
   string URL=2;
 }

 message UpdateChassisRequest{
   string sessionToken=1;
   string URL=2;
   bytes RequestBody = 3;
 }
